--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
 
     <div class="container">
         <button class="theme-btn" onclick="toggleTheme()" id="themeIcon">🌙</button>
-        <h1>Teng bo'lishamiz 🚀</h1>
+        <h1>Teng bo'lishamiz</h1>
 
         <div class="input-group">
             <div class="row">
                 <input type="text" id="itemName" placeholder="Nima yedinglar?">
-                <input type="number" id="itemPrice" placeholder="Narxi">
+                <input type="tel" id="itemPrice" placeholder="Narxi">
             </div>
         </div>
         <button class="main-btn" id="actionBtn" onclick="handleAction()">+ Qo'shish</button>
