--- a/index.html
+++ b/index.html
@@ -228,6 +228,18 @@
             transition: 0.2s;
         }
         .share-btn:hover { background: rgba(255,255,255,0.25); }
+        @media screen and (max-width: 500px){
+            .container { 
+                padding-top: 60px; 
+            }
+            .theme-btn {
+                top: 60px;
+                right: -20px;
+                border: 1px solid var(--border);
+                background: var(--bg);
+            }
+        }
+
 
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
     </style>
